# libeyeter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README.org
include/: Procedure.h  Program.h  program.h
src/: CMakeLists.txt  Procedure.cpp  Program.cpp  program.cpp
t/: CMakeLists.txt  program.cpp  testProcedure.cpp  testProgram.cpp
t/data/: program_01.eye  program_02.eye
